--- a/build.xml
+++ b/build.xml
@@ -430,10 +430,6 @@ Modified by Nitkalya Wiriyanuparb
 		<echo file="${upstage.dir.tmp}/upstage-server-daemon.bat" message="${upstage.script.upstage-server-daemon.win}" />
 		<echo file="${upstage.dir.tmp}/upstage-server-daemon.command" message="${upstage.script.upstage-server-daemon.mac}" />
 		<echo file="${upstage.dir.tmp}/upstage-server-daemon.sh" message="${upstage.script.upstage-server-daemon.linux}" />
-
-		<echo file="${upstage.dir.tmp}/upstage-server-kill.bat" message="${upstage.script.upstage-server-kill.win}" />
-		<echo file="${upstage.dir.tmp}/upstage-server-kill.command" message="${upstage.script.upstage-server-kill.mac}" />
-		<echo file="${upstage.dir.tmp}/upstage-server-kill.sh" message="${upstage.script.upstage-server-kill.linux}" />
 		
 		<condition property="upstage.python.executable.replace.win" value="${upstage.python.executable.win}">
 			<isset property="upstage.python.executable.win" />
@@ -454,10 +450,6 @@ Modified by Nitkalya Wiriyanuparb
 		<replaceregexp file="${upstage.dir.tmp}/upstage-server-daemon.bat" match="\$\{upstage.python.executable\}" replace="${upstage.python.executable.replace.win}" flags="g" />
 		<replaceregexp file="${upstage.dir.tmp}/upstage-server-daemon.command" match="\$\{upstage.python.executable\}" replace="${upstage.python.executable.replace.mac}" flags="g" />
 		<replaceregexp file="${upstage.dir.tmp}/upstage-server-daemon.sh" match="\$\{upstage.python.executable\}" replace="${upstage.python.executable.replace.linux}" flags="g" />
-
-		<replaceregexp file="${upstage.dir.tmp}/upstage-server-kill.bat" match="\$\{upstage.python.executable\}" replace="${upstage.python.executable.replace.win}" flags="g" />
-		<replaceregexp file="${upstage.dir.tmp}/upstage-server-kill.command" match="\$\{upstage.python.executable\}" replace="${upstage.python.executable.replace.mac}" flags="g" />
-		<replaceregexp file="${upstage.dir.tmp}/upstage-server-kill.sh" match="\$\{upstage.python.executable\}" replace="${upstage.python.executable.replace.linux}" flags="g" />
 		
 		<loadfile property="upstage.file.bat" srcfile="${upstage.dir.tmp}/upstage-server.bat" />
 		<loadfile property="upstage.file.command" srcfile="${upstage.dir.tmp}/upstage-server.command" />
@@ -701,44 +693,6 @@ Modified by Nitkalya Wiriyanuparb
 		</exec>
 		
 	</target>
-
-	<!-- kill UpStage started as a daemon -->
-	<target name="stop" depends="set-variables">
-		
-		<condition property="exec.command" value="cmd">
-			<isset property="isWindows" />
-		</condition>
-		<condition property="exec.argline-server" value="/c upstage-server-kill.bat">
-			<isset property="isWindows" />
-		</condition>
-		
-		<condition property="exec.command" value="/bin/sh">
-			<isset property="isMacOSX" />
-		</condition>
-		<condition property="exec.argline-server" value="upstage-server-kill.command">
-			<isset property="isMacOSX" />
-		</condition>
-		
-		<condition property="exec.command" value="/bin/sh">
-			<isset property="isLinux" />
-		</condition>
-		<condition property="exec.argline-server" value="upstage-server-kill.sh">
-			<isset property="isLinux" />
-		</condition>
-		
-		<!-- DEBUG -->
-		<echo message="______________________________________________________" />
-		<echo message="Generated command-line to kill UpStage:" />
-		<echo message="execution directory : ${upstage.dir.build}" />
-		<echo message="upstage             : ${exec.command} ${exec.argline-server}" />
-		<echo message="______________________________________________________" />
-		
-		<!-- kill server -->
-		<exec executable="${exec.command}" dir="${upstage.dir.build}">
-			<arg line="${exec.argline-server}" />
-		</exec>
-
-	</target>
 	
 	<!-- kill all running server/policyd instances -->
 	<target name="kill" depends="set-variables">
@@ -777,6 +731,9 @@ Modified by Nitkalya Wiriyanuparb
 		<exec executable="${exec.command}" outputproperty="exec.out" resultproperty ="exec.result">
 			<arg line="${exec.argline-python-kill}" />
 		</exec>
+
+		<!-- delete the pid file too -->
+		<delete file="${upstage.dir.build}/upstage.pid" />
 		
 		<!-- TODO: output exec.error property if return code != 128 -->
 		<echo level="debug" message="Return code: ${exec.out} (${exec.result})" />
